# QueChat

./: .env  .gitignore  pyproject.toml
src/que_chat/: config.py  database.py  master.py  procfile  requirements.txt
src/que_chat/backend/: dependencies.py
src/que_chat/backend/database/: message.py  user.py
src/que_chat/backend/models/: message.py  user.py
src/que_chat/backend/schemas/: message.py  user.py
src/que_chat/backend/security/: auth.py
src/que_chat/frontend/: indScript.js  index.html  script.js  style.css
