[project]
name = "que-chat"
version = "0.1.0"
description = ""
authors = [
    {name = "W1-user",email = "wolframgit@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio (>=4.0.0,<5.0.0)",
    "aiohttp (>=3.14.1,<4.0.0)",
    "websocket (>=0.2.1,<0.3.0)",
    "fastapi (>=0.137.1,<0.138.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "que_chat", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
