[project]
name = "que-chat"
version = "0.1.0"
description = ""
authors = [
    {name = "W1-user",email = "wolframgit@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio (>=4.0.0,<5.0.0)",
    "websocket (>=0.2.1,<0.3.0)",
    "fastapi (>=0.137.1,<0.138.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "psycopg (>=3.3.4,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "psycopg-binary (>=3.3.4,<4.0.0)"
]

[tool.poetry]
packages = [{include = "que_chat", from = "src"}]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
